--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.3.1",
     "react-datepicker": "^7.2.0",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-i18next": "^14.1.2",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.7",
